# ALICE-TRT

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  build.rs
.github/workflows/: ci.yml
benches/: contact_solve_batched.rs  gpu_matmul.rs  pgs_dispatch.rs
bindings/ue5/: AliceTrt.h
bindings/unity/: AliceTrt.cs
csrc/: CMakeLists.txt  alice_trt_c_api.h  bitnet_kernel.cu
csrc/plugin/: alice_ternary_plugin.cpp  alice_ternary_plugin.cu  alice_ternary_plugin.h
docs/: MIGRATION_v3.md  PHASE_3_DESIGN.md  PHASE_4_DESIGN.md
docs/audits/: STUB_AUDIT_v2.8.0.md  STUB_AUDIT_v3.1.0.md
src/: constraint_graph.rs  db_bridge.rs  device.rs  ffi.rs  fix128.rs  inference.rs  kernel.rs  lib.rs  physics_bridge.rs  pipeline.rs  profiler.rs  python.rs  sdf_bridge.rs  tensor.rs  view_bridge.rs  voice_bridge.rs  weights.rs
src/cuda/: engine.rs  ffi.rs  mod.rs
