[package]
name = "alice-trt"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "GPU Ternary Inference Engine - Don't move data. Move the law."
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-TRT"
keywords = ["gpu", "inference", "ternary", "bitnet", "wgpu", "cuda", "tensorrt"]
categories = ["science", "gpu"]

[lib]
name = "alice_trt"
crate-type = ["rlib", "cdylib"]

[features]
default = []
cuda = ["dep:cc"]
physics = ["dep:alice-physics"]  # GPU ternary inference for physics control policies
sdf = ["dep:alice-sdf"]  # GPU neural SDF approximation via ternary networks
db = ["dep:alice-db"]  # ALICE-DB inference metrics persistence
view = []  # ALICE-View neural upscaling bridge
voice = []  # GPU voice feature extraction bridge

[dependencies]
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
alice-ml = { path = "../ALICE-ML" }
alice-physics = { path = "../ALICE-Physics", optional = true, default-features = false, features = ["std"] }
alice-sdf = { path = "../ALICE-SDF", optional = true, default-features = false }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "gpu_matmul"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
opt-level = 3
codegen-units = 1
debug = false
