[package]
name = "alice-trt"
version = "2.7.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
description = "GPU Ternary Inference Engine - Don't move data. Move the law."
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-TRT"
keywords = ["gpu", "inference", "ternary", "bitnet", "wgpu", "cuda", "tensorrt"]
categories = ["science", "gpu"]
publish = false

[lib]
name = "alice_trt"
crate-type = ["rlib", "cdylib"]

[features]
default = []
ffi = []                         # C-ABI FFI (37 functions)
python = ["dep:pyo3"]            # PyO3 Python bindings (5 classes)
cuda = ["dep:cc"]
physics = ["dep:alice-physics"]  # GPU ternary inference for physics control policies
sdf = ["dep:alice-sdf"]  # GPU neural SDF approximation via ternary networks
db = ["dep:alice-db"]  # ALICE-DB inference metrics persistence
view = []  # ALICE-View neural upscaling bridge
voice = []  # GPU voice feature extraction bridge
fix128-arithmetic = []  # Fix128 GPU primitive kernels (add/sub/mul/dot) for physics solver offload
physics-solver = ["physics", "fix128-arithmetic", "alice-physics/gpu-solver-bridge"]  # Compute-shader-based Fix128 physics solver (ALICE-Physics GpuSolverBridge implementer)

[dependencies]
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
alice-ml = { path = "../ALICE-ML" }
alice-physics = { path = "../ALICE-Physics", optional = true, default-features = false, features = ["std"] }
alice-sdf = { path = "../ALICE-SDF", optional = true, default-features = false }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "gpu_matmul"
harness = false

[[bench]]
name = "pgs_dispatch"
harness = false
required-features = ["physics-solver"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
opt-level = 3
codegen-units = 1
debug = false
